deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emqx
  namespace: emqx
  labels:
    app: emqx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: emqx
  template:
    metadata:
      labels:
        app: emqx
    spec:
      serviceAccountName: emqx
      containers:
      - name: emqx
        image: emqx/emqx:5.6.0
        ports:
        - containerPort: 1883
        - containerPort: 8883
        - containerPort: 8081
        - containerPort: 8083
        - containerPort: 8084
        - containerPort: 18083
