emqx.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: emqx
  namespace: emqx
spec:
  serviceName: emqx-service
  replicas: 3
  selector:
    matchLabels:
      app: emqx
  template:
    metadata:
      labels:
        app: emqx
    spec:
      containers:
        - name: emqx
          image: emqx/emqx:5.3.0
          ports:
            - containerPort: 1883
              name: mqtt
            - containerPort: 18083
              name: dashboard
          readinessProbe:
            httpGet:
              path: /status
              port: 18083
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 20
            periodSeconds: 10
