statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: emqx-statefulset
spec:
  serviceName: emqx-headless
  replicas: 3
  selector:
    matchLabels:
      app: emqx
  template:
    metadata:
      labels:
        app: emqx
    spec:
      containers:
        - name: emqx
          image: emqx/emqx:4.4
          ports:
            - name: mqtt
              containerPort: 1883
            - name: mgmt
              containerPort: 8081
