emqx-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: emqx-headless
  labels:
    app: emqx
spec:
  clusterIP: None
  selector:
    app: emqx
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
