emqx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emqx-service
  namespace: emqx
spec:
  type: NodePort
  selector:
    app: emqx
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
      nodePort: 30083

    - name: dashboard
      port: 18083
      targetPort: 18083
      nodePort: 31083
