emqx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-mqtt-ingress
  namespace: emqx
spec:
  ingressClassName: nginx
  rules:
  - host: emqx-mqtt.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: emqx-listeners
            port:
              number: 8883
